--- a/minesweeper/src/components/GameOver/game-over-modal.css
+++ b/minesweeper/src/components/GameOver/game-over-modal.css
@@ -1,113 +1,38 @@
-/**********************************************
-*** © Linguagens Script > DEIS > ISEC > IPC 
-*** Jogo de Memória em React
-*** Estilos para game-over-modal.component.jsx 
-**********************************************/
-/*--------------------------------------------------
-Estilos para as Janelas Modais
---------------------------------------------------*/
-dialog {
-  border-radius: 10px;
-  max-width: 350px;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
   width: 100%;
-  margin: 100px auto 0px auto;
-  text-align: center;
-  outline: none;
-  box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.3);
-  background-color: var(--top10Color);
-  border: 3px solid var(--top10Color);
-  color: white;
-}
-dialog::backdrop {
-  background-color: rgba(18, 18, 18, 0.5);
-}
-.closeModal:hover {
-  background-color: grey;
-}
-[id^="modal-"] .info div {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  text-align: center;
-  justify-content: center;
-  font-size: smaller;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-#modal-top10 .info div:nth-child(even) {
-  background: rgba(224, 221, 221);
+.modal.open {
+  display: block;
 }
-#modal-top10 .info div:nth-child(odd) {
-  background: white;
+
+.modal .estilos {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
-#modal-top10 .info p {
-  padding: 5px;
-  color: black;
-}
-#modal-top10 .info div:first-child {
-  background-color: #c0bbbb;
-  font-weight: bolder;
-}
-#modal-top10 .info div p:first-child {
-  text-align: right;
-}
-[id^="modal-"] .info div p {
-  text-align: left;
-  border-right: rgb(155, 149, 149) 1px solid;
-}
-[id^="modal-"] header {
+
+.closeModal {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
   font-weight: bold;
-  color: white;
-  padding-bottom: 2px;
 }
 
-[id^="modal-"] header span {
-  padding: 0px 5px;
-  cursor: default;
-  position: absolute;
-  right: 0px;
-}
-
-[id^="modal-"] input {
-  padding: 2px 3px;
-  border-radius: 5px;
-  background-color: #e9e7e7;
-  width: 150px;
-  font-weight: lighter;
-}
-[id^="modal-"] button {
-  padding: 0px 5px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-#modal-gameOver {
-  background-color: var(--gameOverColor);
-  border: 3px solid var(--gameOverColor);
-}
-#modal-gameOver .info {
-  padding: 10px;
-  font-weight: bolder;
+.closeModal:hover,
+.closeModal:focus {
   color: black;
-  line-height: 1.75em;
-  background-color: white;
-}
-#modal-gameOver #nickname {
-  font-weight: lighter;
-  font-size: smaller;
-}
-
-#modal-top10 .info div:nth-child(even) {
-  background: rgba(224, 221, 221);
-}
-#modal-top10 .info div:nth-child(odd) {
-  background: white;
-}
-#modal-top10 .info p {
-  padding: 5px;
-  color: black;
-}
-#modal-top10 .info div:first-child {
-  background-color: #c0bbbb;
-  font-weight: bolder;
-}
-#modal-top10 .info div p:first-child {
-  text-align: right;
+  text-decoration: none;
+  cursor: pointer;
 }
