--- a/minesweeper/src/components/Board/board.css
+++ b/minesweeper/src/components/Board/board.css
@@ -3,13 +3,15 @@
   grid-template-columns: repeat(7, 40px); 
   grid-template-rows: repeat(7, 40px); 
   grid-gap: 1px; 
-  border: 1px solid #999; 
   width: fit-content; 
   margin-left: auto;
   margin-right: auto;
 }
 
-
+.placeFlag {
+  display: flex;
+  margin: 20px;
+}
 
 .cell.open {
   background-color: #fff;
